    DELETE-BLACKBOARD-REPOSITORY behavior on instances of that class:
      nil  = don't retain 
      true = retain (a value of :PROPAGATE indicates propagation of
                     :PROPAGATE retention value (as default) to subclasses)
    - The :RETAIN class option is overridden if DELETE-BLACKBOARD-REPOSITORY
      is invoked with a true :ALL-CLASSES keyword value

  * Queue objects (headers, elements) are now unit instances, new Agenda
    Shell unit classes KSA-QUEUE and ORDERED-KSA-QUEUE

  * New :name argument for START-CONTROL-SHELL and RESUME-CONTROL-SHELL


Important changes in GBBopen 0.9.7:

  * Renamed functions:
       ALLOWED-UNIT-CLASSES      -> ALLOWED-UNIT-CLASSES-OF
       SPACE-INSTANCE-CHILDREN   -> CHILDREN-OF
       SPACE-INSTANCE-DIMENSIONS -> DIMENSIONS-OF
       SPACE-INSTANCE-PARENT     -> PARENT-OF
       UNIT-CLASS-DIMENSIONS     -> DIMENSIONS-OF

  * Save & load blackboard repository support; PRINT-OBJECT-FOR-SAVING/SENDING
    protocol

  * Version 1.2 of the Mini-Module System
    - Support for module-relative directory specifications; implicit module
      rooting

  * Added LIST-LENGTH>1, LIST-LENGTH>, SHRINK-VECTOR, and TRIMMED-SUBSTRING to
    GBBopen-tools
 
  * Version 2.2 of the Portable Threads Interface
    - Periodic functions

  * Version 2.1 of the Portable Threads Interface
    - Scheduled functions, new THREAD-ALIVE-P and ENCODE-TIME-OF-DAY functions

  * Version 2.0 of the Portable Threads Interface
    - Recursive and nonrecursive locks, with stronger enforcement of usage
      violations (to reduce the potential for different behavior on different
      CL implementations).
    - Use of condition variables for thread waiting/notification
    - Improved hibernation behavior
    - New WITH-TIMEOUT function

    The names of many Portable Threads functions were changed (for
    consistency with new capabilities and to make the portable-threads
    interface names more "thread-centric" rather than "process-centric"):