@@ -289,8 +289,8 @@ value.
     (:dimensional-values 
      (belief :point belief)
      (classification :element classification)
-     (x :point #'location.x location)
-     (y :point #'location.y location))
+     (x :point #'x-of location)
+     (y :point #'y-of location))
     (:initial-space-instances (bb hyps)))
 #&lt;standard-unit-class hyp&gt;
 </pre>
